fix nav-menu overflow

--- a/main.scss
+++ b/main.scss
@@ -65,7 +65,7 @@ nav {
     }
 
     .navList-con {
-        transform: translate3d(20px, -290px, 20px);
+        transform: translate3d(20px, -350px, 20px);
         transition: 600ms;
         padding: 9em 1em 1em 3em;
         position: absolute;
